# mimir

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  protocol.rs
tests/: cli.rs
