[package]
name = "mimir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3", features=["derive", "cargo"] }
regex = "1"
lazy_static = "1"
tokio = { version="1", features=["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
