[package]
name = "mimir"
authors = ["Andre Guerra <agu3rra@me.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agu3rra/mimir"
description = "A CLI app to test supported TLS cipher suites in a communication channel."
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3", features=["derive", "cargo"] }
tokio = { version="1", features=["full"] }
rand = { version="0", features=["getrandom"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
